add swagger doc to user handler
