# infra/webserver/handlers/user_handlers.go
@@ -15,12 +15,27 @@ type UserHandler struct {
 	UserDB database.UserInterface
 }
 
+type Error struct {
+	Message string `json:"message"`
+}
+
 func NewUserHandler(userDB database.UserInterface) *UserHandler {
 	return &UserHandler{
 		UserDB: userDB,
 	}
 }
 
+// Get JWT godoc
+// @Summary 		Get a user JWT
+// @Description Get a user JWT
+// @Tags 				users
+// @Accept 			json
+// @Produce 		json
+// @Param 			request		body		dto.GetJWTInput		true		"user credentials"
+// @Success 		200 {object} dto.GetJWTOutput
+// @Failure 		404		{object}		Error
+// @Failure 		500		{object}		Error
+// @Router 			/users/generate_token		[post]
 func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 	jwt := r.Context().Value("jwt").(*jwtauth.JWTAuth)
 	jwtExpiresIn := r.Context().Value("jwtExpiresIn").(int)
@@ -33,7 +48,11 @@ func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 
 	u, err := h.UserDB.FindByEmail(user.Email)
 	if err != nil {
-		w.WriteHeader(http.StatusUnauthorized)
+		w.WriteHeader(http.StatusNotFound)
+		err := Error{
+			Message: err.Error(),
+		}
+		json.NewEncoder(w).Encode(err)
 		return
 	}
 
@@ -47,9 +66,7 @@ func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 		"exp": time.Now().Add(time.Second * time.Duration(jwtExpiresIn)).Unix(),
 	})
 
-	accessToken := struct {
-		AccessToken string `json:"access_token"`
-	}{
+	accessToken := dto.GetJWTOutput{
 		AccessToken: tokenString,
 	}
 
@@ -58,23 +75,45 @@ func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(accessToken)
 }
 
+// Create user godoc
+// @Summary 		Create user
+// @Description Create user
+// @Tags 				users
+// @Accept 			json
+// @Produce 		json
+// @Param 			request		body		dto.CreateUserInput		true		"user request"
+// @Success 		201
+// @Failure 		500		{object}		Error
+// @Router 			/users		[post]
 func (h *UserHandler) CreateUser(w http.ResponseWriter, r *http.Request) {
 	var user dto.CreateUserInput
 	err := json.NewDecoder(r.Body).Decode(&user)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
+		error := Error{
+			Message: err.Error(),
+		}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 
 	u, err := entities.NewUser(user.Name, user.Email, user.Password)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
+		error := Error{
+			Message: err.Error(),
+		}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 
 	err = h.UserDB.Create(u)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		error := Error{
+			Message: err.Error(),
+		}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 
